# ntparser

./: .gitignore  CMakeLists.txt  README.md
include/: istream_c.h  nt_parser.hpp
src/: example.cpp  istream_c.cpp  nt_parser.cpp  split_nt.cpp
